--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,7 @@
-VITE_FIREBASE_API_KEY= "AIzaSyCFtzluzfHL_BbNOOakTJKQkfAnMWDez9Y",
-
+VITE_API_KEY=AIzaSyCFtzluzfHL_BbNOOakTJKQkfAnMWDez9Y
+VITE_AUTH_DOMAIN=real-estate-7a6e0.firebaseapp.com
+VITE_PROJECT_ID=real-estate-7a6e0
+VITE_STORAGE_BUCKET=real-estate-7a6e0.appspot.com
+VITE_MESSAGING_SENDER_ID=391737308576
+VITE_APP_ID=1:391737308576:web:13089501ccf56b6e2ca0c5
+VITE_MEASUREMENT_ID=G-SESC2S96TR
